crates/test-files/fixtures/compile_errors/trait_not_in_scope/src/main.fe

contract Example {
  pub fn run_test(self) {
    1.do()
  }
}
